# my-flutter-cursor-app

./: .firebaserc  QUOTE_REFACTORING.md  README.md  SUPABASE_SETUP.md  analysis_options.yaml  pubspec.yaml  start.bat  start.sh
.github/workflows/: ci.yml
android/: gradle.properties
android/app/: build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
integration_test/: claim_flow_test.dart
ios/Runner/: GoogleService-Info.plist
lib/: main.dart
lib/config/: router.dart  router.g.dart  theme.dart
lib/core/config/: firebase_options.dart  supabase_config.dart
lib/core/router/: app_router.dart
lib/core/theme/: app_theme.dart
lib/data/datasources/: quote_api.dart
lib/data/repositories/: auth_repository_impl.dart  claim_repository_impl.dart  notification_repository_impl.dart  quote_repository_impl.dart  supabase_auth_repository.dart
lib/domain/entities/: claim.dart  claim.freezed.dart  claim.g.dart  notification.dart  notification.freezed.dart  notification.g.dart  office.dart  office.g.dart  quote.dart  quote.freezed.dart  quote.g.dart  user.dart  user.freezed.dart  user.g.dart
lib/domain/repositories/: auth_repository.dart  claim_repository.dart  notification_repository.dart  quote_repository.dart
lib/presentation/providers/: auth_provider.dart  claim_provider.dart  notification_provider.dart  quote_provider.dart
lib/presentation/screens/auth/: login_screen.dart  register_screen.dart
lib/presentation/screens/claim/: claim_details_screen.dart  claim_screen.dart  claims_list_screen.dart
lib/presentation/screens/map/: offline_map_screen.dart
lib/presentation/screens/notification/: notification_detail_screen.dart  notifications_list_screen.dart
lib/presentation/screens/profile/: profile_screen.dart
lib/presentation/screens/quote/: auto_quote_screen.dart  deces_quote_screen.dart  epargne_quote_screen.dart  habitation_quote_screen.dart  insurance_type_selection_screen.dart  quote_details_screen.dart  quote_screen.dart  quotes_list_screen.dart  sante_quote_screen.dart  voyage_quote_screen.dart
lib/presentation/widgets/: animated_button.dart
lib/services/: map_service.dart  notification_service.dart  quote_service.dart  supabase_service.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
test/presentation/screens/claim/: claim_screen_test.dart
windows/flutter/: generated_plugins.cmake
windows/runner/: CMakeLists.txt
windows/runner/flutter/: generated_plugin_registrant.cc  generated_plugin_registrant.h
